force-app/main/default/objects/FundingBatch__c/fields/Reopen_Batch_Display__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Batch_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopen Batch Display</label>
    <type>Checkbox</type>
</CustomField>