force-app/main/default/objects/FundingBatch__c/fields/SHEP_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>SHEP_Grant_Per_House__c</fullName>
    <formula>SHEP_Grant_Total__c / SHEP_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average spend of energy performance pot per social home for batch only</inlineHelpText>
    <label>Grant Per House SHEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>