force-app/main/default/objects/FundingBatch__c/fields/SHEP_Grant_Per_House_All_Approved__c.field-meta.xml
<CustomField>
    <fullName>SHEP_Grant_Per_House_All_Approved__c</fullName>
    <formula>(Active_Baseline__r.SHEP_Grant_Total__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        SHEP_Grant_Total__c, 
        IF(ISBLANK( Previous_Version__r.SHEP_Grant_Total__c ),SHEP_Grant_Total__c , SHEP_Grant_Total__c - Previous_Version__r.SHEP_Grant_Total__c))
    , SHEP_Grant_Total__c)
)

/

(Active_Baseline__r.SHEP_House_Count__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        SHEP_House_Count__c, 
        IF(ISBLANK( Previous_Version__r.SHEP_House_Count__c ),SHEP_House_Count__c , SHEP_House_Count__c - Previous_Version__r.SHEP_House_Count__c))
    , SHEP_House_Count__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average grant spend of energy performance pot per social home for all approved homes to date + current batch</inlineHelpText>
    <label>Grant Per House All Approved SHEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>