force-app/main/default/objects/FundingBatch__c/fields/SHEP_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>SHEP_Grant_Total__c</fullName>
    <inlineHelpText>Total grant funding via energy performance pot for social homes within batch</inlineHelpText>
    <label>Grant Total SHEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>