force-app/main/default/objects/FundingBatch__c/fields/SHEP_House_Count__c.field-meta.xml
<CustomField>
    <fullName>SHEP_House_Count__c</fullName>
    <inlineHelpText>Number of social homes utilising energy performance pot within batch</inlineHelpText>
    <label>House Count SHEP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>