force-app/main/default/objects/FundingBatch__c/fields/SHEP_Matched_Total__c.field-meta.xml
<CustomField>
    <fullName>SHEP_Matched_Total__c</fullName>
    <inlineHelpText>Total landlord matched funding for energy performance pot for social  homes within batch</inlineHelpText>
    <label>Matched Total SHEP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>