force-app/main/default/objects/FundingBatch__c/fields/SHLCH_Grant_Per_House__c.field-meta.xml
<CustomField>
    <fullName>SHLCH_Grant_Per_House__c</fullName>
    <formula>SHLCH_Grant_Total__c / SHLCH_House_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average spend of low carbon heat pot per social  home for batch only</inlineHelpText>
    <label>Grant Per House SHLCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>