force-app/main/default/objects/FundingBatch__c/fields/SHLCH_Grant_Per_House_All_Approved__c.field-meta.xml
<CustomField>
    <fullName>SHLCH_Grant_Per_House_All_Approved__c</fullName>
    <formula>(Active_Baseline__r.SHLCH_Grant_Total__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        SHLCH_Grant_Total__c, 
        IF(ISBLANK( Previous_Version__r.SHLCH_Grant_Total__c ),SHLCH_Grant_Total__c , SHLCH_Grant_Total__c - Previous_Version__r.SHLCH_Grant_Total__c))
    , SHLCH_Grant_Total__c)
)

/

(Active_Baseline__r.SHLCH_House_Count__c + 

IF(ISPICKVAL(Version_Status__c,&apos;Draft&apos;), 
    IF(ISBLANK( Previous_Version__c ),
        SHLCH_House_Count__c, 
        IF(ISBLANK( Previous_Version__r.SHLCH_House_Count__c ),SHLCH_House_Count__c , SHLCH_House_Count__c - Previous_Version__r.SHLCH_House_Count__c))
    , SHLCH_House_Count__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Per House All Approved SHLCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>