force-app/main/default/objects/FundingBatch__c/fields/SHLCH_Grant_Total__c.field-meta.xml
<CustomField>
    <fullName>SHLCH_Grant_Total__c</fullName>
    <inlineHelpText>Total grant funding via low carbon heat cost pot for social  homes within batch</inlineHelpText>
    <label>Grant Total SHLCH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>