force-app/main/default/objects/FundingBatch__c/fields/SHLCH_House_Count__c.field-meta.xml
<CustomField>
    <fullName>SHLCH_House_Count__c</fullName>
    <inlineHelpText>Number of social homes utilising low carbon heat pot within batch</inlineHelpText>
    <label>House Count SHLCH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>