force-app/main/default/objects/FundingBatch__c/fields/Social_Homes__c.field-meta.xml
<CustomField>
    <fullName>Social_Homes__c</fullName>
    <label>Social Homes</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatchProperty__c.Tenure__c</field>
        <operation>equals</operation>
        <value>Social housing (50% funded)</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>