force-app/main/default/objects/FundingBatch__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>This is the date that a batch was submitted by the GR (as opposed to date created)</description>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>