force-app/main/default/objects/FundingBatch__c/fields/Total_Capital_Already_Spent_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Already_Spent_Upfront__c</fullName>
    <label>Total Capital Already Spent Upfront</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>