force-app/main/default/objects/FundingBatch__c/fields/Total_Capital_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Expenditure__c</fullName>
    <label>Total Capital Expenditure</label>
    <summarizedField>FundingBatchCapitalExpenditure__c.Total_Spend__c</summarizedField>
    <summaryForeignKey>FundingBatchCapitalExpenditure__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>