force-app/main/default/objects/FundingBatch__c/fields/Total_Electric_Off_Gas__c.field-meta.xml
<CustomField>
    <fullName>Total_Electric_Off_Gas__c</fullName>
    <label>Total Electric Off-Gas</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatchProperty__c.Fuel_Type__c</field>
        <operation>equals</operation>
        <value>Electric (off grid), Park home-electric (off grid)</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>