force-app/main/default/objects/FundingBatch__c/fields/Total_Grant_Fund_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Grant_Fund_Requested__c</fullName>
    <formula>(OOEP_Grant_Total__c + OOLCH_Grant_Total__c + PR100EP_Grant_Total__c + PR100LCH_Grant_Total__c + PR50EP_Grant_Total__c + PR50LCH_Grant_Total__c + SHEP_Grant_Total__c + SHLCH_Grant_Total__c) - Total_Capital_Already_Spent_Upfront__c - Paid_Total_to_Date__c - Adjustment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total grant funding requested for transfer to GR bank account</inlineHelpText>
    <label>Total Grant Fund Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>