force-app/main/default/objects/FundingBatch__c/fields/Total_Homes__c.field-meta.xml
<CustomField>
    <fullName>Total_Homes__c</fullName>
    <label>Total Homes</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>