force-app/main/default/objects/FundingBatch__c/fields/Total_Landlord_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Total_Landlord_Contribution__c</fullName>
    <formula>PR50EP_Matched_Total__c + PR50LCH_Matched_Total__c + SHEP_Matched_Total__c + SHLCH_Matched_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total spend contributed by landlord matched funding</inlineHelpText>
    <label>Total Landlord Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>