force-app/main/default/objects/FundingBatch__c/fields/Total_Measure_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Measure_Spend__c</fullName>
    <label>Total Measure Spend</label>
    <summarizedField>FundingBatchMeasureSpend__c.Spend__c</summarizedField>
    <summaryForeignKey>FundingBatchMeasureSpend__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>