force-app/main/default/objects/FundingBatch__c/fields/Total_of_Spend_Per_House__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Spend_Per_House__c</fullName>
    <formula>OOEP_Grant_Total__c + OOLCH_Grant_Total__c + PR100EP_Grant_Total__c + PR100LCH_Grant_Total__c + PR50EP_Grant_Total__c + PR50LCH_Grant_Total__c + SHEP_Grant_Total__c + SHLCH_Grant_Total__c +  PR50EP_Matched_Total__c +  PR50LCH_Matched_Total__c +  SHEP_Matched_Total__c +  SHLCH_Matched_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total of Spend Per House</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>