force-app/main/default/objects/FundingBatch__c/fields/Total_On_Grid_Homes__c.field-meta.xml
<CustomField>
    <fullName>Total_On_Grid_Homes__c</fullName>
    <label>Total On Grid Homes</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatchProperty__c.Fuel_Type__c</field>
        <operation>equals</operation>
        <value>Gas (on grid)</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>