force-app/main/default/objects/FundingBatch__c/fields/Total_Owner_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Total_Owner_Occupied__c</fullName>
    <label>Total Owner Occupied</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatchProperty__c.Tenure__c</field>
        <operation>equals</operation>
        <value>Owner occupied</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>