force-app/main/default/objects/FundingBatch__c/fields/Total_Park_Homes__c.field-meta.xml
<CustomField>
    <fullName>Total_Park_Homes__c</fullName>
    <label>Total Park Homes</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatchProperty__c.Fuel_Type__c</field>
        <operation>equals</operation>
        <value>Park home-electric (off grid), Park home-fossil fuel (off grid)</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>