force-app/main/default/objects/FundingBatch__c/fields/Total_Private_fully_funded__c.field-meta.xml
<CustomField>
    <fullName>Total_Private_fully_funded__c</fullName>
    <label>Total Private fully-funded</label>
    <summarizedField>FundingBatchProperty__c.Property_Count__c</summarizedField>
    <summaryFilterItems>
        <field>FundingBatchProperty__c.Tenure__c</field>
        <operation>equals</operation>
        <value>Private rented sector (fully funded)</value>
    </summaryFilterItems>
    <summaryForeignKey>FundingBatchProperty__c.Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>