force-app/main/default/objects/FundingBatch__c/fields/Total_Spend_All_Homes__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend_All_Homes__c</fullName>
    <formula>Total_of_Spend_Per_House__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total spend on all homes (including grant and landlord matched funding plus upfront capital already spent)</inlineHelpText>
    <label>Total Spend - All Homes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>