force-app/main/default/objects/FundingBatch__c/fields/VAT_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>VAT_Inclusive__c</fullName>
    <inlineHelpText>Are the costs you have provided inclusive of VAT?</inlineHelpText>
    <label>VAT Inclusive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>