force-app/main/default/objects/FundingBatch__c/fields/Version_Status__c.field-meta.xml
<CustomField>
    <fullName>Version_Status__c</fullName>
    <description>Defaults to draft, is flow fast field updated to active when the batch is set to ABS_Status approved, is set to historic when a new batch version is created</description>
    <label>Version Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Historic</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>