force-app/main/default/objects/FundingBatch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ABS_Status__c</columns>
    <columns>Active_Baseline__c</columns>
    <columns>Total_Grant_Fund_Requested__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>LA_Identifier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FY1_Baseline__c</columns>
    <columns>FY2_Baseline__c</columns>
    <columns>Parent_Disbursement__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Version_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>