force-app/main/default/objects/FundingBatch__c/listViews/All_Batches_detail.listView-meta.xml
<ListView>
    <fullName>All_Batches_detail</fullName>
    <columns>NAME</columns>
    <columns>LA_Identifier__c</columns>
    <columns>ABS_Status__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Active_Baseline__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Grant_Fund_Requested__c</columns>
    <columns>Total_Homes__c</columns>
    <columns>Total_Measure_Spend__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>Funding_Used_value__c</columns>
    <columns>Full_Batch_Id__c</columns>
    <columns>Version_Number__c</columns>
    <columns>Version_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Batches detail</label>
</ListView>