force-app/main/default/objects/FundingBatch__c/listViews/Batch_For_Approval.listView-meta.xml
<ListView>
    <fullName>Batch_For_Approval</fullName>
    <columns>NAME</columns>
    <columns>Full_Batch_Id__c</columns>
    <columns>LA_Identifier__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Total_Homes__c</columns>
    <columns>Total_Grant_Fund_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABS_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Version_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Active</value>
    </filters>
    <label>Batch For Approval</label>
</ListView>