force-app/main/default/objects/FundingBatch__c/listViews/Batch_Ready_For_My_Approval.listView-meta.xml
<ListView>
    <fullName>Batch_Ready_For_My_Approval</fullName>
    <columns>NAME</columns>
    <columns>Full_Batch_Id__c</columns>
    <columns>LA_Identifier__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Total_Homes__c</columns>
    <columns>Total_Spend_All_Homes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ABS_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Version_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Active</value>
    </filters>
    <label>Batches Ready For My Approval</label>
</ListView>