force-app/main/default/objects/FundingBatch__c/listViews/Batches_Held.listView-meta.xml
<ListView>
    <fullName>Batches_Held</fullName>
    <columns>NAME</columns>
    <columns>Full_Batch_Id__c</columns>
    <columns>LA_Identifier__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Total_Homes__c</columns>
    <columns>Total_Spend_All_Homes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABS_Status__c</field>
        <operation>equals</operation>
        <value>Held</value>
    </filters>
    <filters>
        <field>Version_Status__c</field>
        <operation>equals</operation>
        <value>Draft,Active</value>
    </filters>
    <label>Batches Held</label>
</ListView>