force-app/main/default/objects/FundingBatch__c/listViews/Batches_Pre_Approved.listView-meta.xml
<ListView>
    <fullName>Batches_Pre_Approved</fullName>
    <columns>NAME</columns>
    <columns>LA_Identifier__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Active_Baseline__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Grant_Fund_Requested__c</columns>
    <columns>Total_Homes__c</columns>
    <columns>Total_Measure_Spend__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>Funding_Used_value__c</columns>
    <columns>Full_Batch_Id__c</columns>
    <columns>Version_Number__c</columns>
    <columns>Version_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABS_Status__c</field>
        <operation>equals</operation>
        <value>Pre-Approved</value>
    </filters>
    <label>Batches Pre-Approved</label>
</ListView>