force-app/main/default/objects/FundingBatch__c/listViews/Submitted_Batches.listView-meta.xml
<ListView>
    <fullName>Submitted_Batches</fullName>
    <columns>NAME</columns>
    <columns>Active_Baseline__c</columns>
    <columns>Total_Grant_Fund_Requested__c</columns>
    <columns>Total_Homes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ABS_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted Batches</label>
</ListView>