force-app/main/default/objects/FundingBatch__c/listViews/X8_days_before_end_of_month.listView-meta.xml
<ListView>
    <fullName>X8_days_before_end_of_month</fullName>
    <columns>NAME</columns>
    <columns>LA_Identifier__c</columns>
    <columns>Funding_Award__c</columns>
    <columns>Active_Baseline__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Total_Grant_Fund_Requested__c</columns>
    <columns>Total_Homes__c</columns>
    <columns>Total_Measure_Spend__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>Funding_Used_value__c</columns>
    <columns>Full_Batch_Id__c</columns>
    <columns>Version_Number__c</columns>
    <columns>Version_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Version_Status__c</field>
        <operation>equals</operation>
        <value>Active,Draft</value>
    </filters>
    <filters>
        <field>Version_Status__c</field>
        <operation>equals</operation>
        <value>Active,Draft</value>
    </filters>
    <label>8 days before end of month</label>
</ListView>